# DigitalGameStore

./: .gitignore  CMakeLists.txt  README.md
data/: games.csv  store.json
include/: AdminCli.h  Bundle.h  Cli.h  Game.h  Store.h  User.h  UserCli.h
src/: AdminCli.cpp  Bundle.cpp  Game.cpp  Store.cpp  User.cpp  UserCli.cpp  main.cpp
